--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -9,12 +9,12 @@
 	<packaging>jar</packaging>
 
 	<name>eureka-client</name>
-	<description>eureka-client</description>
+	<description>服务提供者</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.10.RELEASE</version>
+		<version>1.5.12.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
